use Deque collection